--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
 }
 
 .left-container {
-  width: 55%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,6 +24,7 @@ body {
   background-repeat: no-repeat;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   border-radius: 0px 50px 50px 0px;
+  /* transition: width 2s; */
 }
 
 .logo {
@@ -46,18 +47,22 @@ body {
   margin-left: 20px;
   justify-content: center;
   background-color: rgb(255, 255, 255);
+  transition: 2s;
+
 }
 
 .texts {
   text-align: left;
-  font-size: 80px;
+  font-size: 50px;
+  color: #3c3c3c;
   margin-top: 20px;
   margin-bottom: -12px;
 }
 
 .texts1 {
   text-align: left;
-  font-size: 80px;
+  font-size: 70px;
+
   margin-bottom: 10px;
   margin-top: -20px;
 }
@@ -83,4 +88,3 @@ body {
 .react-multi-carousel-list {
   height: 300px;
 }
-
