--- a/src/Style/info.css
+++ b/src/Style/info.css
@@ -8,8 +8,8 @@
     display: flex;
     gap: 100px;
     justify-content: center;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
-    background-color: rgb(184, 236, 225);
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+    background-color: rgb(180, 255, 234);
     align-self: center;
     padding: 20px;
 }
@@ -24,4 +24,16 @@
 
 .desc {
     font-size: 24px;
+}
+
+.info-container-sub-right {
+    font-size: 20px;
+    border-left: 4px solid rgb(0, 82, 75);
+    padding-left: 40px;
+}
+
+.info-container-sub-left {
+
+    border-radius: 2px;
+
 }
